tests/invalid/list_literal_mixed_types/main.py
def run_case() -> None:
    print([1, 2.0])

if __name__ == "__main__":
    run_case()
